# image-converter

./: README.md  pyproject.toml  setup.py
src/image_converter/: __init__.py  __main__.py
src/image_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/image_converter/cli/: app.py
src/image_converter/core/: __init__.py  converter.py  formats.py
src/image_converter/utils/: __init__.py  batch.py  logger.py
